--- a/css/components/header.css
+++ b/css/components/header.css
@@ -22,3 +22,10 @@ nav a {
     margin-left: 20px;
     text-decoration: none;
 }
+
+.hamburger {
+    display: none;
+    font-size: 24px;
+    cursor: pointer;
+    margin-left: 20px;
+}
