--- a/css/layouts/editor.layout.css
+++ b/css/layouts/editor.layout.css
@@ -31,4 +31,32 @@ canvas {
     .editor-section {
         width: 100%;
     }
+    
+    nav {
+        display: none;
+        flex-direction: column;
+        width: 100%;
+        background-color: #ff7f0e;
+        position: absolute;
+        top: 60px;
+        left: 0;
+        z-index: 1;
+    }
+
+    nav ul {
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    nav ul li {
+        padding: 10px 20px;
+    }
+
+    .menu a {
+        display: none;
+    }
+
+    .hamburger {
+        display: block;
+    }
 }
