--- a/css/components/footer.css
+++ b/css/components/footer.css
@@ -2,7 +2,8 @@ footer {
     background-color: #ff7f0e;
     color: white;
     text-align: center;
-    padding: 10px 0;
+    padding: 15px 0;
+    flex: 0 0 auto;
 }
 
 .footer-text {
