--- a/css/layouts/editor.layout.css
+++ b/css/layouts/editor.layout.css
@@ -2,7 +2,7 @@
     margin: auto;
 }
 
-.meme-section {
+.canvas-section {
     flex: 2;
     display: flex;
     justify-content: center;
@@ -14,9 +14,9 @@ canvas {
 }
 
 .editor-section {
-    flex: 1;
+    flex: 2;
     background-color: #f0f0f0;
-    padding: 20px;
+    padding: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
