--- a/css/layouts/gallery.layout.css
+++ b/css/layouts/gallery.layout.css
@@ -48,6 +48,9 @@ nav ul li {
         left: 0;
         z-index: 1;
     }
+    .upload-btn {
+        height: 495px;
+    }
 
     .main-nav ul {
         flex-direction: column;
